--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <h1>Ayush Dutta</h1>
     <p>Business Analyst | Data Scientist | Power BI Enthusiast</p>
     <div class="resume-button">
-      <a href="resume/Ayush.pdf" target="_blank">📄 Download My Resume</a>
+      <a href="resume/Ayush%20Dutta%20Resume.pdf" target="_blank">📄 Download My Resume</a>
     </div>
   </header>
 
@@ -230,7 +230,7 @@
         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
-      <p style="margin-top:10px;font-size:0.9em;color:#888;">(Note: Email functionality requires backend integration like Formspree, Google Forms, etc.)</p>
+      <p style="margin-top:10px;font-size:0.9em;color:#888;">(Note: Email functionality requires backend integration like Formspree, Google Forms, or EmailJS.)</p>
     </section>
   </div>
 
